argocd/istio-demo/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microservice-app-example
    version: v1
    maistra.io/expose-route: "true"
  name: frontend
spec:
  ports:
  - port: 8080
  selector:
    service: frontend
