argocd/istio-demo/frontend/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microdemo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: microapp-cert-ingress # This should match the Certificate secretName
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microdemo
spec:
  hosts:
    - "*"
  gateways:
    - microdemo-gateway
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 8080
